# Hopfield-network-cpp

./: .gitignore  CMakeLists.txt  LICENSE
Inputs/32px/txt/: Бублик.txt  Вертолет.txt  Робот.txt  Символы.txt  Человек.txt
Inputs/64px/: Вопрос.txt  Дом.txt  Треугольник.txt  Фигуры64.txt
Inputs/figures 16px/figures txt/: 3.txt
Inputs/figures/figures txt/: 4.txt
Inputs/Цифры/: Цифры16.psd
Inputs/Цифры 16px/Цифры тхт/: 2.txt  3.txt
Tests/Test1/noise/: 7 20pr.txt
Tests/Test16px_1/input/: 1.txt  6.txt  7.txt  8.txt
Tests/Test16px_1/noise/: 6 30pr.txt  7 30pr.txt  7.txt
Tests/Test16px_2/input/: 5.txt
Tests/Test16px_2/noise/: 3 15pr.txt  5 15pr.txt
Tests/Test16px_3/input/: 5.txt  7.txt
Tests/Test16px_3/noise/: 5 5pr.txt  7 15pr.txt
Tests/Test16px_4/input/: 2.txt  4.txt  9.txt
Tests/Test2/input/: 1.txt
Tests/Test2/noise/: 6.txt  7.txt
Tests/Test3/input/: 6.txt
Tests/Test3/noise/: 9.txt
Tests/Test32_1/input/: Человек.txt
Tests/Test32px_1/input/: Символы.txt
Tests/Test32px_2_1/input/: Робот.txt
Tests/Test32px_2_1/noise/: Робот 5pr  Символы 5pr
Tests/Test32px_2_2/noise/: Вертолет 5pr
Tests/Test32px_3/input/: Десятка.txt
Tests/Test32px_3/noise/: Десятка 45pr  Рамка 35pr  Рамка 45pr
Tests/Test32px_4/input/: Рожица.txt
Tests/Test32px_4/noise/: Десятка 15pr  Десятка 50pr  (+4 more)
include/: hopfieldnet.hpp  neuron.hpp  prints.hpp
results/: output_256_1.txt  Плохие эталоны но их 2 на большом шуме.txt  Плохие эталоны но их 2.txt  Плохие эталоны.txt  Хорошие всего 4.txt  Хорошие всего 5.txt  Цифры химера.txt
src/: main.cpp  run_net.cpp
(+479 files in other folders)
